--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.jakewharton.hugo'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'realm-android'
+apply plugin: 'jacoco-android'
+
 
 android {
   compileSdkVersion 25
@@ -30,6 +35,31 @@ dependencies {
   compile 'com.android.support:design:25.3.1'
   testCompile 'junit:junit:4.12'
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+
+  //    retrofit
+  compile 'com.squareup.retrofit2:retrofit:2.1.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+
+  //    butterknife
+  compile 'com.jakewharton:butterknife:8.4.0'
+  apt 'com.jakewharton:butterknife-compiler:8.4.0'
+
+  //    dagger2
+  compile group: 'com.google.dagger', name: 'dagger', version: '2.9'
+  apt 'com.google.dagger:dagger-compiler:2.9'
+
+  //    picasso
+  compile 'com.squareup.picasso:picasso:2.5.2'
+
+  //dexter
+  compile 'com.karumi:dexter:4.1.0'
+
+  // rxjava
+  compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  compile 'io.reactivex.rxjava2:rxkotlin:2.0.3'
+
 }
 repositories {
   mavenCentral()
