--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,27 @@ buildscript {
     classpath 'com.android.tools.build:gradle:2.3.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-    // NOTE: Do not place your application dependencies here; they belong
-    // in the individual module build.gradle files
+    classpath 'com.android.tools.build:gradle:2.3.1'
+
+    //android-apt plugin (tools to aid code generation)
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+
+    //realm database plugin
+    classpath "io.realm:realm-gradle-plugin:2.0.1"
+
+    //hugo
+    classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+
+    classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
   }
 }
 
 allprojects {
   repositories {
     jcenter()
+    maven { url "https://jitpack.io" }
+    maven { url 'https://maven.fabric.io/public' }
+    mavenCentral()
   }
 }
 
