--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
 
 
   //    retrofit
-  compile 'com.squareup.retrofit2:retrofit:2.1.0'
+  compile 'com.google.code.gson:gson:2.7'
+  compile 'com.squareup.retrofit2:retrofit:2.3.0'
   compile 'com.squareup.retrofit2:converter-gson:2.0.2'
 
   //    butterknife
@@ -60,6 +61,9 @@ dependencies {
   compile 'io.reactivex.rxjava2:rxjava:2.1.1'
   compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
   compile 'io.reactivex.rxjava2:rxkotlin:2.0.3'
+
+  compile 'com.facebook.stetho:stetho:1.5.0'
+  compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
 }
 repositories {
