--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,10 @@ dependencies {
   compile 'com.facebook.stetho:stetho:1.5.0'
   compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
+  //  kugo
+  provided project(':kugo-annotation')
+  kapt project(':kugo-processing')
+
 }
 repositories {
   mavenCentral()
