--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
 apply plugin: 'jacoco-android'
-apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion 25
@@ -22,6 +22,9 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
+  dexOptions {
+    incremental false
   }
 }
 
@@ -70,6 +73,10 @@ dependencies {
   //  stetho
   compile 'com.facebook.stetho:stetho:1.5.0'
   compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+
+
+  kapt "io.realm:realm-annotations:3.5.0"
+  kapt "io.realm:realm-annotations-processor:3.5.0"
 
 }
 repositories {
