--- a/saymyname-app/build.gradle
+++ b/saymyname-app/build.gradle
@@ -23,8 +23,8 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
-  dexOptions {
-    incremental false
+  packagingOptions {
+    exclude 'META-INF/**rxjava.properties**'
   }
 }
 
@@ -72,6 +72,7 @@ dependencies {
   compile 'io.reactivex.rxjava2:rxkotlin:2.0.3'
   compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
   compile 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.0.0'
+  compile 'com.github.akarnokd:rxjava2-interop:0.10.2'
 
   //  stetho
   compile 'com.facebook.stetho:stetho:1.5.0'
