--- a/saymyname-app/src/main/AndroidManifest.xml
+++ b/saymyname-app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
     </activity>
     <activity android:name=".views.activities.SplashScreenActivity">
     </activity>
-
+    <activity android:name=".views.activities.HistoricalEntriesActivity">
+    </activity>
   </application>
 
 </manifest>
