--- a/saymyname-app/build.gradle
+++ b/saymyname-app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
   compile 'io.reactivex.rxjava2:rxkotlin:2.0.3'
   compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
   compile 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.0.0'
+  compile 'com.jakewharton.rxbinding2:rxbinding-design:2.0.0'
   compile 'com.github.akarnokd:rxjava2-interop:0.10.2'
 
   //  stetho
