--- a/saymyname-app/build.gradle
+++ b/saymyname-app/build.gradle
@@ -16,6 +16,7 @@ android {
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    multiDexEnabled true
   }
   buildTypes {
     release {
@@ -48,6 +49,8 @@ dependencies {
 
   //  kotlin
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.1.4-3'
+
 
 
   //  retrofit
@@ -87,3 +90,4 @@ dependencies {
 repositories {
   mavenCentral()
 }
+buildscript {}
