--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.1.2-5'
+  ext.kotlin_version = '1.1.51'
   repositories {
     jcenter()
   }
@@ -9,18 +9,14 @@ buildscript {
     classpath 'com.android.tools.build:gradle:2.3.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-    classpath 'com.android.tools.build:gradle:2.3.1'
-
-    //android-apt plugin (tools to aid code generation)
-    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+//    //android-apt plugin (tools to aid code generation)
+//    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
     //realm database plugin
     classpath "io.realm:realm-gradle-plugin:3.5.0"
 
-    //hugo
-    classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-
     classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
+    classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3'
   }
 }
 
@@ -29,6 +25,7 @@ allprojects {
     jcenter()
     maven { url "https://jitpack.io" }
     maven { url 'https://maven.fabric.io/public' }
+    maven { url "https://maven.google.com" }
     mavenCentral()
   }
 }
