--- a/saymyname-app/build.gradle
+++ b/saymyname-app/build.gradle
@@ -1,18 +1,18 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
 apply plugin: 'jacoco-android'
+apply plugin: 'com.getkeepsafe.dexcount'
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.3"
+  compileSdkVersion 26
+  buildToolsVersion "26.0.2"
   defaultConfig {
     applicationId "com.android.szparag.saymyname"
     minSdkVersion 14
-    targetSdkVersion 25
+    targetSdkVersion 26
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,22 +35,27 @@ kapt {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
+
+  testCompile 'junit:junit:4.12'
+  testCompile 'org.mockito:mockito-core:2.2.12'
+  testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
 
-  //  support libs
-  compile 'com.android.support:appcompat-v7:25.3.1'
-  compile 'com.android.support.constraint:constraint-layout:1.0.2'
-  compile 'com.android.support:design:25.3.1'
 
-  //  testing
-  testCompile 'junit:junit:4.12'
+  debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+  releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+
+  //  support libs
+  compile 'com.android.support:appcompat-v7:26.1.0'
+  compile 'com.android.support:design:26.1.0'
+  compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
 
   //  kotlin
   compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.1.4-3'
-
 
 
   //  retrofit
